--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
 <body>
 <canvas id="main-canvas"></canvas>
 <div class="progress">
-    <div class="determinate" id="render-progress-bar"></div>
+    <div class="determinate" id="render-progress-bar-contents"></div>
 </div>
+<a class="waves-effect waves-light btn" id="render-button">Render</a>
 
 <script src="src/vec3.js"></script>
+<script src="src/ray.js"></script>
 <script src="src/raytracer.js"></script>
 </body>
 </html>
