Completing up to the end of chapter 6.3. Preparing for more generic collision. Added in some extra code to actually use the new collision code to make sure it's actually working.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 
 <script src="src/vec3.js"></script>
 <script src="src/ray.js"></script>
+<script src="src/hittable.js"></script>
+<script src="src/hitRecord.js"></script>
+<script src="src/sphere.js"></script>
 <script src="src/raytracer.js"></script>
 </body>
 </html>
