--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <script src="src/ray.js"></script>
 <script src="src/hittable.js"></script>
 <script src="src/hitRecord.js"></script>
+<script src="src/hittableList.js"></script>
 <script src="src/sphere.js"></script>
 <script src="src/raytracer.js"></script>
 </body>
