Completing up to the end of chapter 6. Just some clean-up here and adding another sphere.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <a class="waves-effect waves-light btn" id="render-button">Render</a>
 </div>
 
+<script src="src/utility.js"></script>
 <script src="src/vec3.js"></script>
 <script src="src/ray.js"></script>
 <script src="src/hittable.js"></script>
