--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
 
 <script src="src/utility.js"></script>
 <script src="src/vec3.js"></script>
+<script src="src/colour.js"></script>
 <script src="src/ray.js"></script>
 <script src="src/hittable.js"></script>
 <script src="src/hitRecord.js"></script>
 <script src="src/hittableList.js"></script>
 <script src="src/sphere.js"></script>
+<script src="src/camera.js"></script>
 <script src="src/raytracer.js"></script>
 </body>
 </html>
