--- a/index.html
+++ b/index.html
@@ -13,8 +13,17 @@
 <body>
 <div id="contents">
     <canvas id="main-canvas"></canvas>
-    <div class="progress" id="render-progress-bar">
-        <div class="determinate" id="render-progress-bar-contents"></div>
+    <div role="progressbar" class="mdc-linear-progress" id="render-progress-bar" aria-label="Render Progress Bar" aria-valuemin="0" aria-valuemax="1" aria-valuenow="0">
+        <div class="mdc-linear-progress__buffer">
+            <div class="mdc-linear-progress__buffer-bar"></div>
+            <div class="mdc-linear-progress__buffer-dots"></div>
+        </div>
+        <div class="mdc-linear-progress__bar mdc-linear-progress__primary-bar">
+            <span class="mdc-linear-progress__bar-inner"></span>
+        </div>
+        <div class="mdc-linear-progress__bar mdc-linear-progress__secondary-bar">
+            <span class="mdc-linear-progress__bar-inner"></span>
+        </div>
     </div>
     <button class="mdc-button mdc-button--raised" id="render-button">
         <span class="mdc-button__ripple"></span>
