Trying out splitting the workers by alternating rows for a more even balance depending on where objects are found. Ideally I want to just jump by pixel so that the load is balanced between the threads.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <span class="mdc-button__ripple"></span>
         Render
     </button>
+    <span id="render-time">Render Time: None.</span>
 </div>
 
 <script src="src/utility.js"></script>
