Completing up to the end of chapter 9.5. Materials are now set up and can be Lambertian or a metal. Had to debug a ton of math but it's actually working now.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
 <script src="src/utility.js"></script>
 <script src="src/vec3.js"></script>
 <script src="src/colour.js"></script>
+<script src="src/materialScatterRecord.js"></script>
+<script src="src/material.js"></script>
+<script src="src/lambertian.js"></script>
+<script src="src/metal.js"></script>
 <script src="src/ray.js"></script>
 <script src="src/hittable.js"></script>
 <script src="src/hitRecord.js"></script>
