Completing to the end of chapter 10. Dielectrics are now functional but seem kinda funky. Maybe there's a mistake, or maybe I just have to get used to them.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 <script src="src/material.js"></script>
 <script src="src/lambertian.js"></script>
 <script src="src/metal.js"></script>
+<script src="src/dielectric.js"></script>
 <script src="src/ray.js"></script>
 <script src="src/hittable.js"></script>
 <script src="src/hitRecord.js"></script>
